--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 permalink: /blog/:year/:month/:day/:title.html
 title: HHVM
-tagline: Moving fast with high performance Hack
+tagline: 用高性能的 Hack 高效开发
 fbappid: "1615782811974223"
 gacode: "UA-49208336-2"
 
@@ -16,7 +16,7 @@ gacode: "UA-49208336-2"
 # This was also be set to the right thing automatically for local development
 # https://github.com/blog/2277-what-s-new-in-github-pages-with-jekyll-3-3
 # http://jekyllrb.com/news/2016/10/06/jekyll-3-3-is-here/
-url: "http://hhvm.com"
+url: "http://hhvm-cn.com"
 
 # Note: There are new filters in Jekyll 3.3 to help with absolute and relative urls
 # absolute_url
@@ -27,7 +27,7 @@ url: "http://hhvm.com"
 # https://github.com/blog/2277-what-s-new-in-github-pages-with-jekyll-3-3
 
 # The GitHub repo for your project
-ghrepo: "hhvm/hhvm.com"
+ghrepo: "hhvm-cn/hhvm-cn.com"
 
 # Use these color settings to determine your colour scheme for the site.
 color:
