--- a/_data/promo.yml
+++ b/_data/promo.yml
@@ -21,5 +21,5 @@
 - type: plugin_row
   children:
   - type: button
-    href: https://docs.hhvm.com/hhvm/getting-started/getting-started
-    text: Get Started With HHVM
+    href: https://docs.hhvm-cn.com/hhvm/getting-started/getting-started
+    text: HHVM 快速上手
